--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,28 @@
 version: '2'
 services:
   registry:
-    image: registry:2
+    image: registry:2.6
     container_name: registry
     restart: always
     networks:
       - front
     volumes:
-      - data:/var/lib/registry
+      - registry-data:/var/lib/registry
     environment:
+      - REGISTRY_LOG_LEVEL=${REGISTRY_LOG_LEVEL}
+      - REGISTRY_AUTH_TOKEN_REALM=${REGISTRY_AUTH_TOKEN_REALM}
+      - REGISTRY_AUTH_TOKEN_SERVICE=${REGISTRY_AUTH_TOKEN_SERVICE}
+      - REGISTRY_AUTH_TOKEN_ISSUER=${REGISTRY_AUTH_TOKEN_ISSUER}
+      - REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE=${REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE}
+      - REGISTRY_STORAGE_DELETE_ENABLED=${REGISTRY_STORAGE_DELETE_ENABLED}
+
       - VIRTUAL_HOST=${VIRTUAL_HOST}
       - LETSENCRYPT_HOST=${VIRTUAL_HOST}
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
 
+
 volumes:
-  data:
+  registry-data:
 
 networks:
   front:
